--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 Start at the top left square  and choose a color adjacent to that square. Continue selecting adjacent squares to flood the board with one color.
                 <br>
                 <br>
-                Remember you only have 21 trys! Good Luck! 
+                Remember you only have 21 tries! Good Luck! 
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
